spec/conformance/invalid/invalid-header.ontos
@ontos 1.0
@Title Invalid header

- Root @id(root)
  purpose: Exercise invalid header syntax.
